--- a/index.html
+++ b/index.html
@@ -61,7 +61,44 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button data-modal-close>
+            <h2></h2>
+            <label>
+              <span>Имя</span>
+              <input type="text" />
+              <svg width="18px" height="18px">
+                <use href="./images/icons.svg#icon-"></use>
+              </svg>
+            </label>
+            <label>
+              <span>Телефон</span>
+              <input type="tel" />
+              <svg width="18px" height="18px">
+                <use href="./images/icons.svg#icon-"></use>
+              </svg>
+            </label>
+            <label>
+              <span>Почта</span>
+              <input type="email" />
+              <svg width="18px" height="18px">
+                <use href="./images/icons.svg#icon-"></use>
+              </svg>
+            </label>
+            <label>
+              <span>Комментарий</span>
+              <textarea name="" id="" cols="30" rows="10"></textarea>
+              <svg width="18px" height="18px">
+                <use href="./images/icons.svg#icon-"></use>
+              </svg>
+            </label>
+            <label>
+              <p>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
+              <input type="checkbox" />
+              <svg width="16px" height="15px">
+                <use></use>
+              </svg>
+            </label>
+            <button class="send-button">Отправить</button>
+            <button class="close-button" data-modal-close>
               <svg width="18px" height="18px">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
