--- a/index.html
+++ b/index.html
@@ -61,46 +61,62 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <h2></h2>
-            <label>
-              <span>Имя</span>
-              <input type="text" />
-              <svg width="18px" height="18px">
-                <use href="./images/icons.svg#icon-"></use>
-              </svg>
-            </label>
-            <label>
-              <span>Телефон</span>
-              <input type="tel" />
-              <svg width="18px" height="18px">
-                <use href="./images/icons.svg#icon-"></use>
-              </svg>
-            </label>
-            <label>
-              <span>Почта</span>
-              <input type="email" />
-              <svg width="18px" height="18px">
-                <use href="./images/icons.svg#icon-"></use>
-              </svg>
-            </label>
-            <label>
-              <span>Комментарий</span>
-              <textarea name="" id="" cols="30" rows="10"></textarea>
-              <svg width="18px" height="18px">
-                <use href="./images/icons.svg#icon-"></use>
-              </svg>
-            </label>
-            <label>
-              <p>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
-              <input type="checkbox" />
-              <svg width="16px" height="15px">
-                <use></use>
-              </svg>
-            </label>
-            <button class="send-button">Отправить</button>
+            <form>
+              <h2 class="modal-text">Оставьте свои данные, мы вам перезвоним</h2>
+              <label>
+                <span class="input-description">Имя</span>
+
+                <input class="modal-input" type="text" name="name" />
+                <svg class="modal-icon" width="18px" height="18px">
+                  <use class="icon-person" href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </label>
+              <label>
+                <span class="input-description">Телефон</span>
+
+                <input class="modal-input" type="tel" name="telephone-number" />
+                <svg class="modal-icon" width="18px" height="18px">
+                  <use class="icon-phone" href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </label>
+              <label>
+                <span class="input-description">Почта</span>
+
+                <input class="modal-input" type="email" name="email" />
+                <svg class="modal-icon" width="18px" height="18px">
+                  <use class="icon-email" href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </label>
+              <label>
+                <span class="input-description">Комментарий</span>
+                <textarea
+                  class="modal-input"
+                  name="comment"
+                  cols="30"
+                  rows="10"
+                  placeholder="Введите текст"
+                ></textarea>
+              </label>
+              <label class="agreement">
+                <input
+                  class="agreement-check visually-hidden"
+                  type="checkbox"
+                  name="agreement-allow"
+                />
+                <p class="agreement-text">
+                  Соглашаюсь с рассылкой и принимаю
+                  <a class="agreement-link" href="">Условия договора</a>
+                </p>
+                <svg class="icon-agreement" width="16px" height="15px">
+                  <use class="icon-checkbox" href="./images/icons.svg#icon-checkbox"></use>
+                  <use class="icon-check" href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </label>
+              <button class="send-button" type="submit">Отправить</button>
+            </form>
             <button class="close-button" data-modal-close>
               <svg width="18px" height="18px">
-                <use href="./images/icons.svg#icon-close"></use>
+                <use class="icon-close" href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
           </div>
@@ -450,7 +466,7 @@
             </ul>
           </address>
         </div>
-        <div>
+        <div class="second-section-footer">
           <strong class="connect">Присоединяйтесь</strong>
           <ul class="social-list-connect list">
             <li>
@@ -482,6 +498,21 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="third-section-footer">
+          <strong class="connect">Подпишитесь на рассылку</strong>
+          <div class="subscribe-fields">
+            <label>
+                <input class="subscribe" type="email" name="email-subscribe" placeholder="E-mail"></input>
+            </label>
+            <button class="subscribe-button" type="submit">Подписаться
+              <span>
+                <svg width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
