Правки станів і модалки

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <form>
-              <h2 class="modal-text">Оставьте свои данные, мы вам перезвоним</h2>
+              <strong class="modal-text">Оставьте свои данные, мы вам перезвоним</strong>
               <label>
                 <span class="input-description">Имя</span>
 
@@ -107,8 +107,8 @@
                   Соглашаюсь с рассылкой и принимаю
                   <a class="agreement-link" href="">Условия договора</a>
                 </p>
+                <span class="icon-checkbox"></span>
                 <svg class="icon-agreement" width="16px" height="15px">
-                  <use class="icon-checkbox" href="./images/icons.svg#icon-checkbox"></use>
                   <use class="icon-check" href="./images/icons.svg#icon-check"></use>
                 </svg>
               </label>
