--- a/portfolio.html
+++ b/portfolio.html
@@ -305,7 +305,7 @@
             </ul>
           </address>
         </div>
-        <div>
+        <div class="second-section-footer">
           <strong class="connect">Присоединяйтесь</strong>
           <ul class="social-list-connect list">
             <li>
@@ -337,6 +337,21 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="third-section-footer">
+          <strong class="connect">Подпишитесь на рассылку</strong>
+          <div class="subscribe-fields">
+            <label>
+                <input class="subscribe" type="email" name="email-subscribe" placeholder="E-mail"></input>
+            </label>
+            <button class="subscribe-button" type="submit">Подписаться
+              <span>
+                <svg width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
